config/400-anno-service.yml
#@ load("@ytt:data", "data")
---
apiVersion: v1
kind: Service
metadata:
  name: anno-proxy
  namespace: #@ data.values.system_namespace
spec:
  selector:
    app: anno-proxy
  ports:
    - protocol: TCP
      port: 8080
      name: https
