config/200-anno-network-policy.yml
#@ load("@ytt:data", "data")
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: anno-proxy
  namespace: #@ data.values.system_namespace
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app: anno-proxy
  egress:
  - {}
